--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,37 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="dup-carousel">
+      <div class="dup-carousel-inner">
+        <div class="dup-carousel-item">
+          <span>item1</span>
+        </div>
+        <div class="dup-carousel-item">
+          <span>item2</span>
+        </div>
+        <div class="dup-carousel-item">
+          <span>item3</span>
+        </div>
+        <div class="dup-carousel-item">
+          <span>item4</span>
+        </div>
+        <div class="dup-carousel-item">
+          <span>item5</span>
+        </div>
+        <div class="dup-carousel-item">
+          <span>item6</span>
+        </div>
+      </div>
+    </div>
+    <div class="ctrl-btn" id="prev">
+      <span>prev</span>
+    </div>
+    <div class="ctrl-btn" id="next">
+      <span>next</span>
+    </div>
+    <div class="ctrl-btn" id="pos">
+      <span>pos</span>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
